--- a/views/user/place-order.hbs
+++ b/views/user/place-order.hbs
@@ -91,13 +91,13 @@ width: 70%;">
           <input type="tel" id="Alt_Phone" name="city" required>
         </label>
         
-<label for="">
+{{!-- <label for="">
                         <div class="cbab-create-account">
                             <span>save address</span>
                            
                             <input name="saveAddress" type="checkbox">
                         </div>
-</label>
+</label> --}}
         <input type="text" name="userId" id="" value="{{user._id}}" hidden>
       </div>
       <div class="Yorder">
