--- a/views/partials/user-header.hbs
+++ b/views/partials/user-header.hbs
@@ -10,7 +10,7 @@
 					</div>
 
 					<div class="right-top-bar flex-w h-full">
-						<a href="#" class="flex-c-m trans-04 p-lr-25">
+						<a href="/about" class="flex-c-m trans-04 p-lr-25">
 							Help & FAQs
 						</a>
 
@@ -23,9 +23,7 @@
 							
 						</a>
 
-						<a href="" class="flex-c-m trans-04 p-lr-25">
-							EN
-						</a>
+						
 							{{#if user}}
 							<a href="/logout" class="flex-c-m trans-04 p-lr-25">logout</a>
 							{{/if}}
